--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: dagger
 
 on:
   push:
@@ -6,17 +6,17 @@ on:
 
 jobs:
   deploy:
-    name: deploy
+    name: Deploy & Test Full Stack
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Deploy & Test Full Stack
+      - name: Call Dagger Full-Stack Pipeline
         uses: dagger/dagger-for-github@8.0.0
         with:
           version: "latest"
-          verb: call
-          module: .dagger/src/dagger_demo
-          args: deploy-full-stack --src=app
+          module: github.com/BRicsi02/dagger-demo/.dagger/src/dagger_demo@main
+          args: deploy_full_stack --src=app
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
