--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           version: "latest"
           module: github.com/BRicsi02/dagger-demo/.dagger/src/dagger_demo@main
-          args: deploy_full_stack --src=app
+          args: deploy-full-stack --src=app
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
