--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Call Dagger Full-Stack Pipeline
         uses: dagger/dagger-for-github@8.0.0
+        env: 
+          DAGGER_ENGINE_DOCKER_IMAGE: dagger/engine:v0.18.0
         with:
           version: "latest"
           module: github.com/BRicsi02/dagger-demo/.dagger/src/dagger_demo@main
