--- a/.dagger/manifests/backend-service.yaml
+++ b/.dagger/manifests/backend-service.yaml
@@ -6,5 +6,7 @@ spec:
   selector:
     app: backend-app
   ports:
-    - port: 5000
+    - protocol: TCP
+      port: 5000
       targetPort: 5000
+  type: ClusterIP
