--- a/.dagger/manifests/frontend-service.yaml
+++ b/.dagger/manifests/frontend-service.yaml
@@ -3,8 +3,11 @@ kind: Service
 metadata:
   name: frontend-service
 spec:
+  type: NodePort
   selector:
     app: frontend-app
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 80
+      nodePort: 30000
